todo actualizado, queda ver que salga bien por pantalla